[gd_scene load_steps=9 format=2]

[ext_resource path="res://TabScreens/GalaxyMap/star.material" type="Material" id=1]
[ext_resource path="res://TabScreens/GalaxyMap/grid.png" type="Texture" id=2]
[ext_resource path="res://TabScreens/GalaxyMap/GalaxyCenter.gd" type="Script" id=3]

[sub_resource type="SphereMesh" id=1]
material = ExtResource( 1 )

[sub_resource type="MultiMesh" id=2]
color_format = 2
transform_format = 1
mesh = SubResource( 1 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 9999, 9999 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_world_triplanar = true
params_cull_mode = 2
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 999, 999, 999 )

[sub_resource type="PlaneMesh" id=5]

[node name="GalaxyCenter" type="Spatial"]
script = ExtResource( 3 )

[node name="MultiMeshInstance" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 2 )

[node name="PlaneGrid" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CameraCenter" type="Spatial" parent="PlaneGrid"]

[node name="CameraRotation" type="Spatial" parent="PlaneGrid/CameraCenter"]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0 )

[node name="Camera" type="Camera" parent="PlaneGrid/CameraCenter/CameraRotation"]
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-07, 0, 2.98023e-08, 1, 0, 3.8147e-06, 100 )
fov = 30.0
far = 99999.0

[node name="MeshInstance" type="MeshInstance" parent="PlaneGrid/CameraCenter"]
mesh = SubResource( 5 )
material/0 = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]
